3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix wrong type/missing value. Fix some comments.
 plugins/common/plugin_common.c
 server/plugins.c
Nicolas 2007-03-31

Change partially map plugin API. Add cf_map_has_been_loaded() to plugins.
 plugins/cfanim/cfanim.c
 plugins/cfpython/cfpython.c
 plugins/cfpython/cfpython_map.c
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/plugins.c
Nicolas 2007-03-31

crossedit/Attr.c: Remove obsolete 'flying' attribute.
Andreas Kirschbaum 2007-03-26

Implement feature request #1560387: DM follow command.
 include/player.h sproto.h
 server/c_wiz.c commands.c
 server/server.c: also fix wrong player count with hidden DMs.
Nicolas Weeger 2007-03-25

Fix broken banish command: loop logic was weird (skipping one file?).
 server/ban.c
Nicolas Weeger 2007-03-25

New plugin: cfnewspaper.
As its name implies, it will (in the future) generate an ingame newspaper.
Currently, it will only list player and monster deaths for last ingame day.
It's still very basic, and hopefully will be improved :)
Note that it requires the database generated by cflogger.
 configure configure.ac
 plugins/Makefile.[am|in]
 plugins/cfnewspaper/include/cfnewspaper.h cfnewspaper_proto.h
 plugins/cfnewspaper/cfnewspaper.c Makefile.[am|in]
Nicolas Weeger 2007-03-25

Fix cflogger.
 plugins/cflogger/cflogger.c
---
Add missing directories for cflogger plugin.
 plugins/Makefile.[am|in]
---
Change misc functions plugin API.
 server/plugins.c
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 plugins/cfanim/cfanim.c
 plugins/cfpython/cfpython.c
 plugins/cfpython/cfpython_object.c
 plugins/template/plugin_template.c
---